--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.19.2",
 		"express-session": "^1.18.0",
 		"mongoose": "^8.5.3",
+		"nodemailer": "^6.9.14",
 		"socket.io": "^4.7.5"
 	},
 	"devDependencies": {
