--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@mui/x-date-pickers": "^7.13.0",
     "@tanstack/react-query": "^5.51.24",
     "axios": "^1.7.4",
+    "leaflet": "^1.9.4",
     "material-react-table": "^2.13.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "socket.io-client": "^4.7.5"
   },
